# MLD_lifecycle

./: .gitignore  DataHealthReport.html  FE.md  Improvements.md  Machine_Learning_Steps.md  Makefile  README.md  config.yaml  dvc.yaml  improvement.md  params.yaml  paramseg.yaml  pyproject.toml  run.py  setup.sh  stack_prod.yaml  test.py
.zen/: config.yaml
Resource/: 1. ML Project Final Code File.ipynb  resources.txt
Todo pipeline/: ML_pipeline.py  ml_3.py  ml_flow2.py
configs/: global_conf.py
docs/: Stage_1.0_Data_Ingestion.md  Stage_1.2_Data_Check.md  Stage_2.0_Data_Analysis.md  Stage_2.1_Probabilistic_Analysis.md  Stage_3.0_Data_Preparation.md  Stage_3.0_Split_Baseline.md  Stage_3.2_Outlier_Detection.md  Stage_4.1_Data_Imputation.md  Stage_7.0_Evaluation.md  stage_5.2_encoders.md  stage_5.2_feature_encoding.md  stage_5.3_Feature_construction.md  stage_5.4_feature_transformation.md
notebooks/: pipeline.ipynb  pipeline_notebook.ipynb  stage2_speed_demo.ipynb
pipeline/: DataValidation.py  ML_Flow.py  ML_pipeline_test.py  Machine_Learning_Steps.md  MonitoringPipeline.py  OptunaHPO.py  Pipeline_HP_tuning.py  PredictionPipeline.py  TrainingPipeline.py  end_to_end.py  ml_pipeline_final.py  pipe.py  pipeline_example.ipynb  test.py  training_pipeline.py  workflow.md
src/Data Analysis/: Data Analysis.md  EDA.py  EDA_advance.py  README.md  feature-selection.py
src/Data Cleaning/: Data Cleaning.md  baseline.py  data_preparation.py  data_wrangling_cleaning.py  feature_select_split.py  split_and_baseline.py
src/Data Ingestion/: data_collector.py
src/Data_Preprocessing/: scaling_transform_stage3.py
src/Evaluation/: evaluation.py
src/Feature Engineering/: DR1.py  DR2.py  Feature Engineering.md  README.md  Scale_transform.py  baseline.py  featureSelection.py  feature_engineering.py  scaling_transform_stage4.py  step6_Dimentionality_Reduction.py  step6_pcs.py
src/Model Design/: modelling.md
src/Modelling/: drift.py
src/Stage_10_Deploy/: Deploy.py
src/Stage_1_Data_Ingestion/: data_injection.py  data_inspection.py
src/Stage_1_Ingestion/: DataCollector.py  DataHealthCheck.py  data_loaders.py
src/Stage_2_Data_Analysis/: probabilistic_analysis.py
src/Stage_2_EPD_Analysis/: EDAnalyzer.py  PDAnalysis.py  PED_Analysis.py  UnifiedEPDA.py
src/Stage_3_Split_data/: BaselineModel.py  ThreeWaySplit.py  data_split.py
src/Stage_4_Data_Preprocessing/: Missing_Imputer.py
src/Stage_4_Preprocessor/: Missing_Imputer.py  Outlier_Detection.py  preprocessor.py
src/Stage_5_Feature Engineering/: SmartTransformer.py  encoding_stage5.py  feature_engineering.py  feature_spliting_construction.py
src/Stage_5_Feature_Engineering/: Feature_Construction.py  Feature_Encoding.py  Feature_Splitting.py  Feature_Transformer.py  scaling_transform_stage3.py
src/Stage_7_Evaluation/: Evaluate_register.py
src/Stage_8_HP_tuning/: HP_tuning_optuna.py  ensemble_selector_optuna.py
src/Stage_8_Monitoring/: monitor_probabilistic.py
src/Stage_9_Monitoring/: Monitoring_drift.py  drift.md
src/data_analysis/: EDA.py  Full_EDA.py  Mathematical_EDA.py  OutlierDetection.py  OutlierDetection_stage4.py  improved_stage3.py  leakage_detection.py  probabilistic_analysis.py
src/data_cleaning/: Batch Correction.md  DQW.py  Data Cleaning.md  Imputation.py  dataQualityWorkflow.py  data_preparation.py  data_quality_workflow.py  improved_stage2.py  ml_3.py  split_and_baseline.py
src/utils/: README.md  (+8 more)
stacks/: setup_local_stack.sh  setup_prod_stack.sh  setup_staging_stack.sh
(+9 files in other folders)
