[project]
name = "Machine-Learning-Development-lifecycle"
version = "0.1.0"
description = "Machine Learning Pipeline for me and other ML developers"
authors = [
    {name = "Aashay Phirke"}
]
readme = "README.md"
requires-python = "3.12.10"
dependencies = [
    "pandas (>=2.0,<3.0)",
    "requests (>=2.32.3,<3.0.0)",
    "boto3 (>=1.38.32,<2.0.0)",
    "sqlalchemy (>=2.0,<3.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pymongo (>=4.13.0,<5.0.0)",
    "kafka-python (>=2.2.11,<3.0.0)",
    "gspread (>=6.2.1,<7.0.0)",
    "oauth2client (>=4.1.3,<5.0.0)",
    "paho-mqtt (>=2.1.0,<3.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "missingno (>=0.5.2,<0.6.0)",
    "imbalanced-learn (>=0.11,<0.12)",
    "great-expectations (>=1.5.0,<2.0.0)",
    "scikit-learn (>=1.4,<2.0)",
    "category-encoders (>=2.6,<3.0)",
    "pytest (>=7.0,<8.0)",
    "pytest-cov (>=6.1.1,<7.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "mypy (>=1.16.0,<2.0.0)",
    "statsmodels (>=0.14,<0.15)",
    "pingouin (>=0.5,<0.6)",
    "ydata-profiling (>=4.6,<5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
