[tool.poetry]
name = "machine-learning-development-lifecycle"
version = "0.1.0"
description = "Machine Learning Pipeline for me and other ML developers"
authors = ["Aashay Phirke <you@example.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
zenml = {extras = ["server"], version = "^0.83.0"}
pandas = "^2.3.0"
requests = "^2.32.4"
boto3 = "^1.38.36"
sqlalchemy = "^2.0.41"
psycopg2-binary = "^2.9.10"
pymongo = "^4.13.1"
kafka-python = "^2.2.11"
gspread = "^6.2.1"
oauth2client = "^4.1.3"
paho-mqtt = "^2.1.0"
missingno = "^0.5.2"
pytest = "^8.4.0"
pytest-cov = "^6.2.1"
flake8 = "^7.2.0"
black = "^25.1.0"
mypy = "^1.16.0"
statsmodels = "^0.14.4"
pingouin = "^0.5.5"
copulas = "^0.12.3"


[tool.poetry.scripts]
test = "pipeline.test:main"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
